paypal starting to work

--- a/browser/index.html
+++ b/browser/index.html
@@ -18,10 +18,14 @@
   <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 
 
+
 </head>
 <body>
+    <script src='https://www.paypalobjects.com/js/external/api.js'></script>
   <div id="app"></div>
    <!--local JS dependencies, from Webpack -->
   <script src="/bundle.js"></script>
+ 
+
 </body>
 </html>
