paypal still not quite working

--- a/browser/index.html
+++ b/browser/index.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-    <script src='https://www.paypalobjects.com/js/external/api.js'></script>
+  <script src="https://www.paypalobjects.com/api/checkout.js"></script>
   <div id="app"></div>
    <!--local JS dependencies, from Webpack -->
   <script src="/bundle.js"></script>
